add backend supported by sanic of ai translater

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "diffusers>=0.32.1",
     "faiss-cpu>=1.9.0.post1",
     "fastapi>=0.115.6",
     "gradio>=5.9.1",
@@ -16,6 +17,9 @@ dependencies = [
     "langchain-ollama>=0.2.2",
     "langchain-openai>=0.2.14",
     "pypdf>=5.1.0",
+    "ruff>=0.8.5",
+    "sanic>=24.12.0",
+    "sanic-cors>=2.2.0",
     "transformers>=4.47.1",
     "wikipedia>=1.4.0",
 ]
